--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,3 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="welcome_page_message">Bienvenue sur CHATKT</string>
+    <string name="welcome_page_next_button">Suivant</string>
 </resources>
