--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">chatktapp</string>
+    <string name="app_name" translatable="false">ChatKT</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="welcome_page_message">Welcome to CHATKT</string>
+    <string name="welcome_page_next_button">Next</string>
+    <string name="welcome_page_content_description" translatable="false">Welcome page Logo</string>
 </resources>
