--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,5 +12,6 @@
     <string name="tab_item_contacts">Contacts</string>
     <string name="action_search">Search</string>
     <string name="action_parameters">Parameters</string>
+    <string name="welcome_string">Welcome</string>
 
 </resources>
